--- a/programs.html
+++ b/programs.html
@@ -101,7 +101,7 @@
 
      <!-- Programs & Initiatives Section -->
 <section class="programs">
-  <h2 class="section-title">🌟 Our Programs & Initiatives</h2>
+  <h2 class="section-title">Our Programs & Initiatives</h2>
   <p class="section-subtitle">We empower youth by providing platforms, tools, and opportunities that nurture confidence, resilience, and growth.</p>
 
   <div class="card-container">
@@ -210,5 +210,6 @@
             });
         });
     });
-</script>
+    </script>
+    <script src="path/to/your/script.js"></script>
 </html>
