--- a/programs.html
+++ b/programs.html
@@ -149,6 +149,11 @@
       <a href="#" class="card-link">Take Your Seat →</a>
     </div>
   </div>
+   <button onclick="document.getElementById('change').innerHTML = 'This is not another movement with no executed ideas, It is hope and inclusivity to our valued communities - not only the privileged, but everyone. A promise made, that as we move forward no one shall be left behind,'"><b>Become a Supporter</b></button>
+
+
+
+            <p id="change"></p>
         
   <!--Footer Section-->
   <footer>
