--- a/contact.html
+++ b/contact.html
@@ -162,6 +162,69 @@ background: url("images/aboutbackground.png") no-repeat center/cover;
 
   </div>
 </section>
+    
+    <hr>
+
+   <div class="map-container">
+  <h3 style="color: #2c3e50; font-family: 'Arial', sans-serif; font-size: 1.5rem; font-weight: 600; margin-bottom: 20px; text-align: center;">Our Location</h3>
+  
+  <div class="map-wrapper">
+    <iframe 
+      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3582.69581001394!2d28.050144874176567!3d-26.108946677135446!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1e95732d7abaa2bb%3A0x6e3b5ac49f8d784b!2sSandton%20City!5e0!3m2!1sen!2sza!4v1763582799488!5m2!1sen!2sza" 
+      width="400" 
+      height="280" 
+      allowfullscreen="" 
+      loading="lazy" 
+      referrerpolicy="no-referrer-when-downgrade">
+    </iframe>
+  </div>
+</div>
+
+<style>
+.map-container {
+  max-width: 500px;
+  margin: 0 auto;
+  padding: 25px;
+  background: linear-gradient(135deg, #f5f7fa 0%, #f4ca8c 100%);
+  border-radius: 16px;
+  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
+  border: 1px solid rgba(255, 255, 255, 0.2);
+}
+
+.map-wrapper {
+  display: flex;
+  justify-content: center;
+  position: relative;
+  overflow: hidden;
+  border-radius: 12px;
+  box-shadow: 0 8px 25px rgba(0, 0, 0, 0.15);
+  transition: transform 0.3s ease;
+}
+
+.map-wrapper:hover {
+  transform: translateY(-2px);
+  box-shadow: 0 12px 35px rgba(0, 0, 0, 0.2);
+}
+
+/* Responsive design */
+@media (max-width: 768px) {
+  .map-container {
+    padding: 20px;
+    margin: 10px;
+  }
+  
+  .map-wrapper iframe {
+    width: 100%;
+    max-width: 350px;
+    height: 250px;
+  }
+}
+</style>
+
+    <hr> 
+    
+  </div>
+</section>
 <hr>
 
   <footer>
@@ -194,6 +257,5 @@ document.getElementById("contactForm").addEventListener("submit", function (e) {
   }
 });
 </script>
-
     </body>
 </html>
